--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -33,10 +33,16 @@ main {
 
 header {
     padding: 10px 25px;
-    position: -webkit-sticky;
-    position: sticky;
-    top: 0;
-    z-index: 9999;
+}
+
+.nav-link {
+    text-decoration: none;
+    color: black;
+}
+
+.nav-link:hover {
+    text-decoration: none;
+    color: rgb(53, 47, 47);
 }
 
 .hero {
