--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -22,7 +22,7 @@ html,body:before {
     left: 5px;
     right: 5px;
     bottom: 5px;
-    border: 10px solid black;
+    border: 7.5px solid black;
 }
 
 main {
@@ -100,6 +100,21 @@ header {
 
 .linkedin-link:hover, .github-link:hover, .email:hover {
   text-decoration: none;
+}
+
+/* Projects styles */
+.title {
+    padding: 100px 0 25px 0;
+}
+
+.project {
+    margin: 0 100px;
+}
+
+.project-img {
+    width: 500px;
+    height: auto;
+    margin: 0;
 }
 
 @media screen and (max-width: 576px) {
